--- a/cydonia/pom.xml
+++ b/cydonia/pom.xml
@@ -174,7 +174,7 @@
 		<dependency>
 			<groupId>com.jme3</groupId>
 			<artifactId>jmonkeyengine3</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
+			<version>${jmonkey.version}</version>
 		</dependency>
 	</dependencies>
 </project>
