--- a/cydonia/pom.xml
+++ b/cydonia/pom.xml
@@ -23,4 +23,11 @@
 		</repository>
 	</repositories>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+	</dependencies>
 </project>
