--- a/cydonia/pom.xml
+++ b/cydonia/pom.xml
@@ -15,19 +15,22 @@
 		<jmonkey.version>3.0.0-SNAPSHOT</jmonkey.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>sonatype-public</id>
-			<name>sonatype public</name>
-			<url>https://oss.sonatype.org/content/groups/public/</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom</artifactId>
 			<version>2.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+		<dependency>
+			<groupId>de.encala</groupId>
+			<artifactId>jme3-all</artifactId>
+			<version>3.0.0-NIGHTLY_2013-03-17</version>
+			<type>pom</type>
 		</dependency>
 	</dependencies>
 </project>
