--- a/cydonia/pom.xml
+++ b/cydonia/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.findus</groupId>
 	<artifactId>cydonia</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.1</version>
 	<packaging>jar</packaging>
 
 	<name>cydonia</name>
@@ -33,12 +33,23 @@
 			<type>pom</type>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
-    <resources>
-      <resource>
-        <directory>D:\Programmieren\java\cubiverse43\cydonia\src\main\ressources</directory>
-      </resource>
-    </resources>
-    </build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+		<resources>
+			<resource>
+				<directory>D:\Programmieren\java\cubiverse43\cydonia\src\main\ressources</directory>
+			</resource>
+		</resources>
+	</build>
 </project>
