--- a/cydonia/pom.xml
+++ b/cydonia/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jmonkey.version>3.0.0-SNAPSHOT</jmonkey.version>
-		<mainclass>de.encala.cydonia.main.CydoniaLauncher</mainclass>
+		<mainclass>de.encala.cydonia.CydoniaLauncher</mainclass>
 	</properties>
 
 	<dependencies>
