--- a/cydonia-server/pom.xml
+++ b/cydonia-server/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>de.encala</groupId>
 		<artifactId>cydonia</artifactId>
-		<version>0.7.0</version>
+		<version>0.7.1-SNAPSHOT</version>
 		<relativePath>../cydonia</relativePath>
 	</parent>
 	<artifactId>cydonia-server</artifactId>
@@ -18,26 +18,9 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>2.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>de.encala</groupId>
-			<artifactId>jme3-all</artifactId>
-			<version>3.0.0-NIGHTLY_2013-03-17</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>de.encala</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>cydonia-share</artifactId>
-			<version>0.7.0</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 	
